--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div class="container">
         <div class="row">
@@ -31,18 +30,18 @@
                     <hr>
                     <h5>Search Criteria</h5>
                     <hr>
-                    <li>
+                    <center> <li>
                         <form class="navbar-form navbar-center" role="search">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="dateTime" placeholder="MM/DD/YYYY">
-                                <input type="text" class="form-control" id="city" placeholder="City">
-                                <input type="text" class="form-control" id="state" placeholder="State">
                                 <input type="text" class="form-control" id="country" placeholder="Country">
+                                <input type="text" class="form-control" id="state" placeholder="State (Abbreviated)">
+                                <input type="text" class="form-control" id="city" placeholder="City">
                                 <input type="text" class="form-control" id="shape" placeholder="Shape">
                             </div>
                             <a id="search" class="btn btn-default">Search <span class="glyphicon glyphicon-ok"></span></a>
                         </form>
-                    </li>
+                    </li> </center>
                   </div>
               </ul>
             </div>   
@@ -70,7 +69,7 @@
                                       </tbody>
                                   </table>
                               </div>
-                              <div class="display">Displaying results <span class="bold"><span id="displayNum1"></span> - <span id="displayNum2"></span></span> of <span id="displayNum3" class="bold"></span> observations.</div>
+                              <div class="display">Displaying results <span class="bold"><span id="display1"></span> - <span id="display2"></span></span> of <span id="display3" class="bold"></span> observations.</div>
                               <nav aria-label="...">
                                 <ul class="pager">
                                     <li class="previous"><a href="">Previous</a></li>
@@ -85,12 +84,11 @@
         </div>
       </div>
   <script src="data.js" type="text/javascript"></script>
-  <script src="index.js" type="text/javascript"></script>
+  <script src="app.js" type="text/javascript"></script>
   <script>
     $(document).ready(function() {
       $('#myTable').DataTable();
     });
   </script>
 </body>
-
 </html>
